Fixed width on mobile after no-scroll

--- a/2048/sass/main.sass
+++ b/2048/sass/main.sass
@@ -209,6 +209,7 @@ body
 @media (max-width: 420px)
   body
     position: fixed
+    width: 95%
     .game-title
       font-size: 14vw
       padding-left: 10px
